objects/User_Story_Name__c.object
<CustomObject>
    
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Story_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GitHub_Connection__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GitHub Connection</label>
        <referenceTo>GitHub_Connection__c</referenceTo>
        <relationshipLabel>User Story Names</relationshipLabel>
        <relationshipName>User_Story_Names</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jira_ID__c</fullName>
        <label>Jira ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Version__c</fullName>
        <label>Release Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Org</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>User Story Names</relationshipLabel>
        <relationshipName>User_Story_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready to Deploy</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Org</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>User Story Names (Target Org)</relationshipLabel>
        <relationshipName>User_Story_Names1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket_No__c</fullName>
        <label>Ticket No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>User Story Name</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Name</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Name</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>